[gd_scene load_steps=4 format=2]

[ext_resource path="res://Panel.gd" type="Script" id=1]
[ext_resource path="res://addons/dialog_graph/DialogManager.gd" type="Script" id=2]
[ext_resource path="res://addons/dialog_graph/icon.png" type="Texture" id=3]

[node name="Node2D" type="Node2D"]

[node name="Panel" type="Panel" parent="."]
margin_left = 30.0
margin_top = 360.0
margin_right = 990.0
margin_bottom = 570.0
script = ExtResource( 1 )

[node name="DialogManager" type="Node" parent="Panel"]
script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
dialog_file = "res://Test2Res.json"

[node name="Label" type="Label" parent="Panel"]
margin_left = 30.0
margin_top = 30.0
margin_right = 70.0
margin_bottom = 60.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 30.0
margin_top = 90.0
margin_right = 70.0
margin_bottom = 130.0

[node name="CheckBox" type="CheckBox" parent="Panel"]
margin_left = 780.0
margin_top = 150.0
margin_right = 804.0
margin_bottom = 174.0
text = "Soup Friendly"

[connection signal="gui_input" from="Panel" to="Panel" method="_on_Panel_gui_input"]
[connection signal="dialog_finished" from="Panel/DialogManager" to="Panel" method="_on_DialogManager_dialog_finished"]
[connection signal="new_choice" from="Panel/DialogManager" to="Panel" method="_on_DialogManager_new_choice"]
[connection signal="new_speech" from="Panel/DialogManager" to="Panel" method="_on_DialogManager_new_speech"]
